NetBSD Problem Report #50670

From www@NetBSD.org  Sun Jan 17 09:46:37 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6CEA77ABFC
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 17 Jan 2016 09:46:37 +0000 (UTC)
Message-Id: <20160117094636.9FD207ACC6@mollari.NetBSD.org>
Date: Sun, 17 Jan 2016 09:46:36 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/netinet/ip_mroute.c:2415: misleading formatting ?
X-Send-Pr-Version: www-1.0

>Number:         50670
>Category:       kern
>Synopsis:       src/sys/netinet/ip_mroute.c:2415: misleading formatting ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 17 09:50:00 +0000 2016
>Closed-Date:    Sun Jan 17 15:24:23 +0000 2016
>Last-Modified:  Sun Jan 17 15:24:23 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160116
>Organization:
>Environment:
>Description:
[src/sys/netinet/ip_mroute.c:2415]: (style) Expression is always false because 'else if' condition matches previous condition at line 2412.

    if (socket_send(viftable[vifi].v_rsvpd, m, &rsvp_src) < 0)
        if (rsvpdebug)
            printf("rsvp_input: Failed to append to socket\n");
    else
        if (rsvpdebug)
            printf("rsvp_input: send packet up\n");


Some { and } or some better formatting might help here.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50670 CVS commit: src/sys/netinet
Date: Sun, 17 Jan 2016 10:08:10 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Jan 17 15:08:10 UTC 2016

 Modified Files:
 	src/sys/netinet: ip_mroute.c

 Log Message:
 PR/50670: David Binderman: Tidy up debugging printfs to avoid if else confusion.


 To generate a diff of this commit:
 cvs rdiff -u -r1.132 -r1.133 src/sys/netinet/ip_mroute.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 17 Jan 2016 15:24:23 +0000
State-Changed-Why:
Christos fixed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.