PR/50670: David Binderman: Tidy up debugging printfs to avoid if else confusion.